<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theta.animationdemo.ExpandableView.CurrentPosition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/ivPro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:transitionName="@string/ivTransition"
                android:src="@mipmap/ic_launcher_round"/>
            <TextView
                android:id="@+id/txtLable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/txtLableCurrent"
                 android:textSize="30dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/txtLableCurrentData"
            android:textColor="@color/cardview_dark_background"/>
    </LinearLayout>
</LinearLayout>
