<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_round"
                android:transitionName="@string/ivTransition" />

            <TextView
                android:id="@+id/txtLable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/txtExpandableLAble"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/txtRevealEffectDetail"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="italic"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>